// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide likert scale renders component 1`] = `
<div
  className="slideContainer likertScale"
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Innovative
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide middle"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="notMe reallyNotMe"
        onClick={[Function]}
        type="button"
      >
        really_not_me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="me reallyMe"
        onClick={[Function]}
        type="button"
      >
        really_me
      </button>
    </div>
  </div>
</div>
`;

exports[`Slide renders back button 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Short Cuts
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "1.36986301369863%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide left"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide middle"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
  <button
    className="back"
    onClick={[MockFunction back]}
    type="button"
  >
    <img
      alt="back"
      src="https://cdn.traitify.com/assets/images/js/arrow_left.svg"
    />
  </button>
</div>
`;

exports[`Slide renders back button unless first slide 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Innovative
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide middle"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
</div>
`;

exports[`Slide renders complete progress bar 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Innovative
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide middle"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
</div>
`;

exports[`Slide renders component 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Innovative
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide middle"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
</div>
`;

exports[`Slide renders component with previous and next slides 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Short Cuts
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "1.36986301369863%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide left"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide middle"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
</div>
`;

exports[`Slide renders component with previous slide 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Outgoing
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "98.63013698630137%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide left"
  >
    <img
      alt="A photo of an older man trying to pour cereal from an empty container into his bowl as a boy eats from a full bowl of cereal and milk sitting next to him."
    />
  </div>
  <div
    className="slide middle"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
</div>
`;

exports[`Slide renders fullscreen 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Innovative
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide middle"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
  <button
    aria-label="fullscreen"
    className="fullscreen fullscreenSmall"
    onClick={[MockFunction toggleFullscreen]}
    type="button"
  />
</div>
`;

exports[`Slide renders fullscreen button 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      Innovative
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide middle"
  >
    <img
      alt={null}
    />
  </div>
  <div
    className="slide right"
  >
    <img
      alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
    />
  </div>
  <div
    className="responseContainer"
  >
    <div
      className="buttons"
    >
      <button
        className="me"
        onClick={[Function]}
        type="button"
      >
        me
      </button>
      <button
        className="notMe"
        onClick={[Function]}
        type="button"
      >
        not_me
      </button>
    </div>
  </div>
  <button
    aria-label="fullscreen"
    className="fullscreen "
    onClick={[MockFunction toggleFullscreen]}
    type="button"
  />
</div>
`;

exports[`Slide renders instructions 1`] = `
<div
  className="slideContainer "
>
  <div
    className="captionContainer"
  >
    <div
      className="caption"
    >
      instructions
    </div>
    <div
      className="progressContainer"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="slide middle"
  >
    <div
      className="instructionsSlide"
    >
      <div
        className="instructionsText"
      >
        <span>
          Click me or not me
        </span>
      </div>
      <div
        className="instructionsStart"
      >
        <button
          className="instructionsButton"
          onClick={[MockFunction start]}
          type="button"
        >
          get_started
          →
        </button>
      </div>
    </div>
  </div>
  <div
    className="slide right"
  >
    <img
      alt={null}
    />
  </div>
</div>
`;
